<resources>
    <string name="app_name">CoinTrack</string>
    <string name="logo_name">CoinTrack</string>

    <string name="nav_menu_home">Главная</string>
    <string name="nav_menu_settings">Настройки</string>
    <string name="settings_currency">Основная валюта</string>
    <string name="description">Описание</string>
    <string name="quotes">Показатели</string>

    <string name="quotes_1">Изменение за сутки</string>
    <string name="quotes_2">Торговый объем</string>
    <string name="quotes_3">Доля торгового объема</string>
</resources>