<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fragment_padding"
            >

            <ImageView
                android:id="@+id/imageViewCoin"
                android:layout_width="@dimen/details_logo"
                android:layout_height="@dimen/details_logo"
                android:layout_marginTop="@dimen/fragment_padding"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageViewCoin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Coins.Name"
                    tools:text="Bitcoin"
                    android:layout_marginTop="@dimen/item_coin_image_margin"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Coins.H2"
                    tools:text="100000 RUB"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/textViewName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/descriptionCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:strokeWidth="@dimen/stroke_width"
                    app:strokeColor="@color/stroke_color"
                    app:cardElevation="@dimen/elevation"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewPrice"
                    android:layout_marginTop="@dimen/fragment_padding"
                    app:cardPreventCornerOverlap="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardUseCompatPadding="false"
                    app:contentPadding="@dimen/contentPadding">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/imageViewCoin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/titleDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H3"
                            android:text="@string/description"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                        <TextView
                            android:id="@+id/textDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            tools:text="@string/description"
                            app:layout_constraintTop_toBottomOf="@id/titleDescription"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/quoteCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="@dimen/corner_radius"
                    app:strokeWidth="@dimen/stroke_width"
                    app:strokeColor="@color/stroke_color"
                    app:cardElevation="@dimen/elevation"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionCard"
                    android:layout_marginTop="@dimen/fragment_padding"
                    app:cardPreventCornerOverlap="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardUseCompatPadding="false"
                    app:contentPadding="@dimen/contentPadding">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/imageViewCoin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/titleQuotes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H3"
                            android:text="@string/quotes"
                            android:textStyle="bold"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                        <TextView
                            android:id="@+id/textQuotes1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            android:text="@string/quotes_1"
                            app:layout_constraintTop_toBottomOf="@id/titleQuotes"
                            app:layout_constraintStart_toStartOf="parent"
                            />

                        <TextView
                            android:id="@+id/valueQuotes1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            android:text="@string/quotes_1"
                            app:layout_constraintTop_toBottomOf="@id/titleQuotes"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                        <TextView
                            android:id="@+id/textQuotes2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            android:text="@string/quotes_2"
                            app:layout_constraintTop_toBottomOf="@id/textQuotes1"
                            app:layout_constraintStart_toStartOf="parent"
                            />

                        <TextView
                            android:id="@+id/valueQuotes2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            tools:text="@string/quotes_3"
                            app:layout_constraintTop_toBottomOf="@id/valueQuotes1"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                        <TextView
                            android:id="@+id/textQuotes3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            android:text="@string/quotes_3"
                            app:layout_constraintTop_toBottomOf="@id/textQuotes2"
                            app:layout_constraintStart_toStartOf="parent"
                            />

                        <TextView
                            android:id="@+id/valueQuotes3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Coins.H2"
                            android:layout_marginTop="@dimen/item_coin_image_margin"
                            android:text="@string/quotes_3"
                            app:layout_constraintTop_toBottomOf="@id/valueQuotes2"
                            app:layout_constraintEnd_toEndOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>



<!--            <LinearLayout-->
<!--                android:id="@+id/linearLayoutInfo"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:orientation="vertical"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/imageViewCoin">-->

<!--                <TextView-->
<!--                    android:id="@+id/textViewSymbol"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    tools:text="Btc" />-->
<!--            </LinearLayout>-->

<!--            <TextView-->
<!--                android:id="@+id/textViewWebSite"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:autoLink="web"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfo"-->
<!--                tools:text="www.bitcoin.org" />-->

<!--            <TextView-->
<!--                android:id="@+id/textViewDescription"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textViewWebSite"-->
<!--                tools:text="bla bla bla" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>